--- a/3.html
+++ b/3.html
@@ -95,7 +95,11 @@
 		  
 		  console.log(n); 
 }
-f1()
+//f1()
+var a = "s";
+     a.x = 1;
+     console.log(a.x);
+     console.log(a)
 
 
 	</script>
